--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "llmswap"
-version = "2.1.5"
+version = "3.0.0"
 description = "Universal LLM SDK | OpenAI GPT-4, Claude, Gemini, IBM WatsonX API Wrapper with Cost Optimization. Seamless LLM provider switching with intelligent response caching. Save 50-90% on AI API costs, async operations, automatic failover, enterprise-ready with thread-safe caching."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -57,6 +57,9 @@ dev = [
     "isort>=5.10.0",
     "mypy>=0.991",
 ]
+
+[project.scripts]
+llmswap = "llmswap.cli:main"
 
 [project.urls]
 Homepage = "https://github.com/sreenathmmenon/llmswap"
