--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "llmswap"
-version = "4.1.3"
+version = "4.1.4"
 description = "Universal AI SDK + Code Generation CLI: GitHub Copilot alternative with 7 providers (OpenAI GPT-4o/o1, Claude, Gemini, Cohere, Perplexity, IBM Watson, Groq), natural language to code, cost optimization, enterprise analytics."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -59,6 +59,12 @@ keywords = [
     "cli",
     "ai-cli",
     "terminal-ai",
+    "terminal-assistant",
+    "command-line-ai",
+    "shell-integration",
+    "vim-integration",
+    "vim-plugin",
+    "editor-integration",
     "ai-chat",
     "ai-assistant",
     "cost-optimization",
@@ -74,6 +80,19 @@ keywords = [
     "cost-analytics",
     "developer-tools",
     "hackathon",
+    "hackathon-starter",
+    "rag",
+    "retrieval-augmented-generation",
+    "vector-database",
+    "embeddings",
+    "chatgpt-alternative",
+    "perplexity",
+    "cohere",
+    "streamlit",
+    "fastapi",
+    "langchain",
+    "pinecone",
+    "chromadb",
     "llm-gateway",
     "enterprise-ai"
 ]
