--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "llmswap"
-version = "5.1.5"
+version = "5.1.6"
 description = "cURL for LLMs - Universal SDK + CLI with multiple second brains. Works with Claude Sonnet 4.5, GPT-4 o1, Gemini, Cohere, xAI Grok, Sarvam AI, Perplexity, watsonx, Groq, Ollama. Features: workspace memory, auto-learning journals, teaching-first AI (Eklavya), persona rotation, decision logs, 50-90% cost savings, zero lock-in. Python SDK or CLI. Alternative to Claude Code, Cursor, Continue.dev, Copilot."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -188,7 +188,29 @@ keywords = [
     "10-providers",
     "ai-memory",
     "workspace-ai",
-    "project-context"
+    "project-context",
+    "web-ui",
+    "model-comparison",
+    "llm-comparison",
+    "side-by-side-comparison",
+    "ai-comparison-tool",
+    "model-evaluation",
+    "llm-benchmarking",
+    "visual-comparison",
+    "cost-comparison",
+    "speed-comparison",
+    "quality-comparison",
+    "multi-model-testing",
+    "prompt-testing",
+    "response-comparison",
+    "ai-testing-tool",
+    "model-testing",
+    "llm-evaluation",
+    "browser-ui",
+    "web-interface",
+    "flask-ui",
+    "comparison-dashboard",
+    "ai-dashboard"
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -229,6 +251,10 @@ dependencies = [
 
 [project.optional-dependencies]
 watsonx = ["ibm-watsonx-ai>=0.0.5"]
+web = [
+    "flask>=3.0.0",
+    "flask-cors>=4.0.0",
+]
 all = [
     "anthropic>=0.3.0",
     "openai>=1.0.0",
@@ -236,6 +262,8 @@ all = [
     "ibm-watsonx-ai>=0.0.5",
     "groq>=0.4.0",
     "cohere>=5.16.0",
+    "flask>=3.0.0",
+    "flask-cors>=4.0.0",
 ]
 dev = [
     "pytest>=7.0.0",
