--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "llmswap"
-version = "5.1.8"
-description = "cURL for LLMs - Universal SDK + CLI with multiple second brains. Works with Claude Sonnet 4.5, GPT-4 o1, Gemini, Cohere, xAI Grok, Sarvam AI, Perplexity, watsonx, Groq, Ollama. Features: workspace memory, auto-learning journals, teaching-first AI (Eklavya), persona rotation, decision logs, 50-90% cost savings, zero lock-in. Python SDK or CLI. Alternative to Claude Code, Cursor, Continue.dev, Copilot."
+version = "5.1.9"
+description = "AI infrastructure for LLM routing & cost optimization. Universal SDK + CLI with provider verification, workspace memory, auto-learning journals. Works with Claude Sonnet 4.5, GPT-4 o1, Gemini, Cohere, xAI Grok, Sarvam AI, Perplexity, watsonx, Groq, Ollama. Features: health checks, teaching-first AI (Eklavya), persona rotation, decision logs, 50-90% cost savings, zero lock-in."
 readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
@@ -115,6 +115,13 @@ keywords = [
     "pinecone",
     "chromadb",
     "llm-gateway",
+    "llm-routing",
+    "llm-gateway-routing",
+    "ai-infrastructure",
+    "provider-health-check",
+    "provider-verification",
+    "ai-cost-savings",
+    "multi-model-ai",
     "enterprise-ai",
     "conversational-ai",
     "ai-teaching",
