Refactor CLI entrypoint and update README for consistency
Rename the `llmswap/cli.py` module to `llmswap/app.py` to better
reflect its role as the primary application entrypoint. Update internal
imports (`llmswap/__main__.py`) and project configuration
(`pyproject.toml`) to reference the new module name.

Additionally, update the `README.md` to reflect this change and
improve clarity across various sections. Adjust line endings to ensure
consistent formatting and enhance readability. These changes streamline
the codebase and improve user documentation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,7 +102,7 @@ keywords = [
     "ai-learning",
     "coding-mentor",
     "ai-tutor",
-    "gemini-cli-alternative", 
+    "gemini-cli-alternative",
     "openai-cli-alternative",
     "multi-provider-cli",
     "universal-ai-cli",
@@ -288,7 +288,7 @@ keywords = [
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
-    "Intended Audience :: Information Technology", 
+    "Intended Audience :: Information Technology",
     "Intended Audience :: Science/Research",
     "Intended Audience :: Education",
     "License :: OSI Approved :: MIT License",
@@ -345,7 +345,7 @@ dev = [
 ]
 
 [project.scripts]
-llmswap = "llmswap.cli:main"
+llmswap = "llmswap.app:main"
 llmswap-mcp = "llmswap.cli.mcp_cli:main"
 
 [project.urls]
